--- a/ResultAnalysis.ipynb
+++ b/ResultAnalysis.ipynb
@@ -1269,14 +1269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 718,
+   "execution_count": 720,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-718-59f34562153f>:69: SettingWithCopyWarning: \n",
+      "<ipython-input-720-59f34562153f>:69: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 721,
    "metadata": {},
    "outputs": [
     {
@@ -1379,119 +1379,6 @@
      "text": [
       "clean {'deepGini': 0, 'random': 0, 'voting': 0, 'weight': 9, 'margin': 0, 'leastConfidence': 0, 'stacking': 0, 'fusion': 7}\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>approach</th>\n",
-       "      <th>gat</th>\n",
-       "      <th>gcn</th>\n",
-       "      <th>graphsage</th>\n",
-       "      <th>tagcn</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>random</td>\n",
-       "      <td>0.506160</td>\n",
-       "      <td>0.491918</td>\n",
-       "      <td>0.506992</td>\n",
-       "      <td>0.503400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>margin</td>\n",
-       "      <td>0.681844</td>\n",
-       "      <td>0.687648</td>\n",
-       "      <td>0.707893</td>\n",
-       "      <td>0.710016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>leastConfidence</td>\n",
-       "      <td>0.682207</td>\n",
-       "      <td>0.715706</td>\n",
-       "      <td>0.710161</td>\n",
-       "      <td>0.711226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>deepGini</td>\n",
-       "      <td>0.645362</td>\n",
-       "      <td>0.689064</td>\n",
-       "      <td>0.672394</td>\n",
-       "      <td>0.669027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>voting</td>\n",
-       "      <td>0.754608</td>\n",
-       "      <td>0.752323</td>\n",
-       "      <td>0.754626</td>\n",
-       "      <td>0.751902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>stacking</td>\n",
-       "      <td>0.755121</td>\n",
-       "      <td>0.754790</td>\n",
-       "      <td>0.762763</td>\n",
-       "      <td>0.757145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>fusion</td>\n",
-       "      <td>0.788745</td>\n",
-       "      <td>0.781231</td>\n",
-       "      <td>0.799076</td>\n",
-       "      <td>0.787330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>weight</td>\n",
-       "      <td>0.788470</td>\n",
-       "      <td>0.781230</td>\n",
-       "      <td>0.799059</td>\n",
-       "      <td>0.787364</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          approach       gat       gcn  graphsage     tagcn\n",
-       "0           random  0.506160  0.491918   0.506992  0.503400\n",
-       "1           margin  0.681844  0.687648   0.707893  0.710016\n",
-       "2  leastConfidence  0.682207  0.715706   0.710161  0.711226\n",
-       "3         deepGini  0.645362  0.689064   0.672394  0.669027\n",
-       "4           voting  0.754608  0.752323   0.754626  0.751902\n",
-       "5         stacking  0.755121  0.754790   0.762763  0.757145\n",
-       "6           fusion  0.788745  0.781231   0.799076  0.787330\n",
-       "7           weight  0.788470  0.781230   0.799059  0.787364"
-      ]
-     },
-     "execution_count": 716,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1519,12 +1406,12 @@
     "    res_list.append(tmp_res)\n",
     "    \n",
     "df_res = pd.DataFrame(res_list, columns=['approach']+model_list)\n",
-    "df_res"
+    "df_res.to_excel('table_overleaf/RQ3-1.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 717,
+   "execution_count": 722,
    "metadata": {},
    "outputs": [
     {
@@ -1533,119 +1420,6 @@
      "text": [
       "attack {'deepGini': 0, 'random': 0, 'voting': 0, 'weight': 68, 'margin': 0, 'leastConfidence': 0, 'stacking': 0, 'fusion': 40}\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>approach</th>\n",
-       "      <th>gat</th>\n",
-       "      <th>gcn</th>\n",
-       "      <th>graphsage</th>\n",
-       "      <th>tagcn</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>random</td>\n",
-       "      <td>0.500697</td>\n",
-       "      <td>0.499385</td>\n",
-       "      <td>0.500735</td>\n",
-       "      <td>0.503368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>margin</td>\n",
-       "      <td>0.668975</td>\n",
-       "      <td>0.682603</td>\n",
-       "      <td>0.702452</td>\n",
-       "      <td>0.706015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>leastConfidence</td>\n",
-       "      <td>0.674246</td>\n",
-       "      <td>0.706410</td>\n",
-       "      <td>0.707740</td>\n",
-       "      <td>0.708843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>deepGini</td>\n",
-       "      <td>0.644592</td>\n",
-       "      <td>0.682095</td>\n",
-       "      <td>0.675383</td>\n",
-       "      <td>0.668118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>voting</td>\n",
-       "      <td>0.757152</td>\n",
-       "      <td>0.752652</td>\n",
-       "      <td>0.761250</td>\n",
-       "      <td>0.750151</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>stacking</td>\n",
-       "      <td>0.757946</td>\n",
-       "      <td>0.761052</td>\n",
-       "      <td>0.768915</td>\n",
-       "      <td>0.756541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>fusion</td>\n",
-       "      <td>0.787972</td>\n",
-       "      <td>0.782796</td>\n",
-       "      <td>0.800716</td>\n",
-       "      <td>0.792165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>weight</td>\n",
-       "      <td>0.787934</td>\n",
-       "      <td>0.782880</td>\n",
-       "      <td>0.800745</td>\n",
-       "      <td>0.792190</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          approach       gat       gcn  graphsage     tagcn\n",
-       "0           random  0.500697  0.499385   0.500735  0.503368\n",
-       "1           margin  0.668975  0.682603   0.702452  0.706015\n",
-       "2  leastConfidence  0.674246  0.706410   0.707740  0.708843\n",
-       "3         deepGini  0.644592  0.682095   0.675383  0.668118\n",
-       "4           voting  0.757152  0.752652   0.761250  0.750151\n",
-       "5         stacking  0.757946  0.761052   0.768915  0.756541\n",
-       "6           fusion  0.787972  0.782796   0.800716  0.792165\n",
-       "7           weight  0.787934  0.782880   0.800745  0.792190"
-      ]
-     },
-     "execution_count": 717,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1673,35 +1447,35 @@
     "    res_list.append(tmp_res)\n",
     "    \n",
     "df_res = pd.DataFrame(res_list, columns=['approach']+model_list)\n",
-    "df_res"
+    "df_res.to_excel('table_overleaf/RQ3-2.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.45"
-      ]
-     },
-     "execution_count": 713,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(0.449, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 723,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_res = pd.read_excel('table_overleaf/RQ3_all.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 725,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df_res['approach']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 733,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(np.around(df_res.to_numpy(),4)).to_excel('table_overleaf/RQ3-tmp.xlsx', index=False)"
+   ]
   },
   {
    "cell_type": "code",
