--- a/ResultAnalysis.ipynb
+++ b/ResultAnalysis.ipynb
@@ -1269,19 +1269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 720,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-720-59f34562153f>:69: SettingWithCopyWarning: \n",
+      "<ipython-input-14-992b8d53c114>:70: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_attack['attack'] = df_attack['subject'].apply(udf_get_attack)\n"
+      "  df_attack['attack'] = df_attack['subject'].apply(udf_get_attack)\n",
+      "<ipython-input-14-992b8d53c114>:80: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_attack['flip'] = check_flip\n"
      ]
     }
    ],
@@ -1336,6 +1342,7 @@
     "    \n",
     "    \n",
     "path_list = get_path_apgd('/Users/yinghua.li/Documents/Pycharm/NodeRank/res')\n",
+    "path_list = [i for i in path_list if 'features' not in i and 'apfd' in i]\n",
     "\n",
     "path_list = sorted(path_list)\n",
     "data_list = []\n",
@@ -1358,6 +1365,14 @@
     "df_clean = df[df['attack_check']=='no']\n",
     "\n",
     "###############################\n",
+    "check_flip = []\n",
+    "for i in df_attack['subject']:\n",
+    "    if 'randomattack_flip' in i:\n",
+    "        check_flip.append(1)\n",
+    "    else:\n",
+    "        check_flip.append(0)\n",
+    "df_attack['flip'] = check_flip\n",
+    "df_attack = df_attack[df_attack['flip']==0]\n",
     "\n"
    ]
   },
@@ -1370,14 +1385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clean {'deepGini': 0, 'random': 0, 'voting': 0, 'weight': 9, 'margin': 0, 'leastConfidence': 0, 'stacking': 0, 'fusion': 7}\n"
+      "clean {'weight': 9, 'deepGini': 0, 'stacking': 0, 'voting': 0, 'random': 0, 'leastConfidence': 0, 'margin': 0, 'fusion': 7}\n"
      ]
     }
    ],
@@ -1411,14 +1426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "attack {'deepGini': 0, 'random': 0, 'voting': 0, 'weight': 68, 'margin': 0, 'leastConfidence': 0, 'stacking': 0, 'fusion': 40}\n"
+      "attack {'weight': 57, 'deepGini': 0, 'stacking': 0, 'voting': 0, 'random': 0, 'leastConfidence': 0, 'margin': 0, 'fusion': 35}\n"
      ]
     }
    ],
