--- a/Results.ipynb
+++ b/Results.ipynb
@@ -2670,25 +2670,132 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## RQ4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 359,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name citeseer    cora  lastfm  pubmed    mean\n",
+      "0      0.5579  0.6078  0.6149  0.5803  0.5902\n",
+      "1      0.6238  0.6729  0.7044  0.6280  0.6573\n",
+      "2      0.7294  0.8177  0.8204  0.7721  0.7849\n",
+      "name citeseer    cora  lastfm  pubmed    mean\n",
+      "0      0.5631  0.6078  0.6081  0.5725  0.5879\n",
+      "1      0.6495  0.6841  0.7127  0.6430  0.6723\n",
+      "2      0.7299  0.8028  0.8155  0.7683  0.7791\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "def get_path_apgd(path_dir_compile):\n",
+    "    path_list = []\n",
+    "    if os.path.isdir(path_dir_compile):\n",
+    "        for root, dirs, files in os.walk(path_dir_compile, topdown=True):\n",
+    "            for file in files:\n",
+    "                file_absolute_path = os.path.join(root, file)\n",
+    "                if file_absolute_path.endswith('.csv') and 'apfd' in file_absolute_path:\n",
+    "                    path_list.append(file_absolute_path)\n",
+    "    return path_list\n",
+    "\n",
+    "\n",
+    "def udf_attack(s):\n",
+    "    check_list = ['pgdattack', 'nodeembeddingattack_remove', 'randomattack_add', 'randomattack_flip',\n",
+    "                  'randomattack_remove', 'dice', 'minmax', 'nodeembeddingattack_add']\n",
+    "    for i in check_list:\n",
+    "        if i in s:\n",
+    "            return 'yes'\n",
+    "    return 'no'\n",
+    "\n",
+    "\n",
+    "def udf_get_attack(s):\n",
+    "    check_list = ['pgdattack', 'nodeembeddingattack_remove', 'randomattack_add', 'randomattack_flip',\n",
+    "                  'randomattack_remove', 'dice', 'minmax', 'nodeembeddingattack_add']\n",
+    "    for i in check_list:\n",
+    "        if i in s:\n",
+    "            return i\n",
+    "    \n",
+    "\n",
+    "dic = {'gat': 'GAT', 'gcn': 'GCN', 'tagcn': 'TAGCN', 'graphsage': 'GraphSAGE', 'xgb': 'XGB', 'lgb': 'LGB', 'rf': 'RF', \n",
+    "       'lr': 'LR', 'mutation': 'Mutation', 'fusion': 'NodeRank',\n",
+    "       'deepGini': 'DeepGini', 'leastConfidence': 'Least Confidence', 'margin': 'Margin', 'random': 'Random',\n",
+    "      'vanillasm': 'VanillaSM', 'pcs': 'PCS', 'entropy': 'Entropy',\n",
+    "      'citeseer': 'CiteSeer', 'cora': 'Cora', 'lastfm': 'LastFM', 'pubmed': 'PubMed',\n",
+    "      'dice': 'DICE', 'minmax': 'MMA', 'nodeembeddingattack_add': 'NEAA', 'nodeembeddingattack_remove': 'NEAR', \n",
+    "      'pgdattack': 'PGD', 'randomattack_add': 'RAA', 'randomattack_flip': 'RAF', 'randomattack_remove': 'RAR'}\n",
+    "    \n",
+    "def get_value(i):\n",
+    "    i = str(round(i, 4))\n",
+    "    i = i +'0'* (6-len(i))\n",
+    "    return i\n",
+    "    \n",
+    "path_list = get_path_apgd('./featureresult/')\n",
+    "path_check = [udf_attack(i) for i in path_list]\n",
+    "path_clean = [path_list[i] for i in range(len(path_list)) if path_check[i]=='no']\n",
+    "path_attack = [path_list[i] for i in range(len(path_list)) if path_check[i]=='yes']\n",
+    "path_clean_name = [i.split('_')[1] for i in path_clean]\n",
+    "path_attack_name = [i.split('_')[1] for i in path_attack]\n",
+    "\n",
+    "df_clean = pd.DataFrame([list(pd.read_csv(i, header=None)[0]) for i in path_clean])\n",
+    "df_clean['name'] = path_clean_name\n",
+    "df_clean = df_clean.groupby('name').mean().reset_index().set_index('name').T\n",
+    "df_clean['mean'] = (df_clean['citeseer']+df_clean['cora']+df_clean['lastfm']+df_clean['pubmed'])/4\n",
+    "df_clean['citeseer'] = [get_value(i) for i in df_clean['citeseer']]\n",
+    "df_clean['cora'] = [get_value(i) for i in df_clean['cora']]\n",
+    "df_clean['lastfm'] = [get_value(i) for i in df_clean['lastfm']]\n",
+    "df_clean['pubmed'] = [get_value(i) for i in df_clean['pubmed']]\n",
+    "df_clean['mean'] = [get_value(i) for i in df_clean['mean']]\n",
+    "\n",
+    "print(df_clean)\n",
+    "\n",
+    "\n",
+    "df_attack = pd.DataFrame([list(pd.read_csv(i, header=None)[0]) for i in path_attack])\n",
+    "df_attack['name'] = path_attack_name\n",
+    "df_attack = df_attack.groupby('name').mean().reset_index().set_index('name').T\n",
+    "df_attack['mean'] = (df_attack['citeseer']+df_attack['cora']+df_attack['lastfm']+df_attack['pubmed'])/4\n",
+    "df_attack['citeseer'] = [get_value(i) for i in df_attack['citeseer']]\n",
+    "df_attack['cora'] = [get_value(i) for i in df_attack['cora']]\n",
+    "df_attack['lastfm'] = [get_value(i) for i in df_attack['lastfm']]\n",
+    "df_attack['pubmed'] = [get_value(i) for i in df_attack['pubmed']]\n",
+    "df_attack['mean'] = [get_value(i) for i in df_attack['mean']]\n",
+    "\n",
+    "print(df_attack)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 360,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.590225"
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([0.5579,  0.6078,  0.6149,  0.5803])/4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5477,8 +5584,6 @@
     "\n",
     "plt.savefig('tables/PGD_LastFM_GraphSAGE.pdf', dpi=300, transparent=False)\n",
     "plt.show()\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
